# android-face-landmarks

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/cppLibs/opencv/include/opencv2/: opencv_modules.hpp
app/src/main/java/com/dev/anzalone/luca/facelandmarks/utils/: RectUtils.kt
